Update TeamAssigner.java